--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
                 padding: 0;
                 box-sizing: border-box;
             }
+            body {
+                font-family: Arial, sans-serif;
+                line-height: 1.6;
+                background-color: #f4f4f4;
+                color: #000000;
+                padding: 20px;
+            }
+            header {
+                background-color: #dfd6cb;
+                padding: 20px 0;
+                text-align: center;
+                border-bottom: 2px solid #e0e0e0;
+            }
+
+
 
         </style>
     </head>
@@ -54,7 +69,9 @@
                 such as valley, mountain and squash fold–all used to create different Origami works. 
             </p>
             <p>
-                We additionally offer a clean and user-friendly interface, and engaging visuals.
+                We additionally offer a clean and user-friendly interface, and engaging visuals for a more enjoyable browsing experience.
+                Visitors may navigate pop out navigation bars, keybinds for playable music and quick access to different sections of our website,
+                and interactive element to enhance user engagement.
             </p>
         </section>
 
@@ -71,7 +88,12 @@
         <section>
             <h2> Our Target Audience </h2>
             <p>
-                As an educational and creative website for students, art enthusiasts, STEM, and engineering learners, 
+                As an educational and creative website for students, art enthusiasts, STEM, engineering learners, and all learners alike, 
+                we aim to reach a diverse audience and ignite curiosity by showcasing the intersection of art and science through the beauty
+                of origami. 
+            </p>
+            <p> 
+                Together, we will guide you on a exhilerating journey into the world of paper folding- from every crevice and fold lies a secret waiting to be told!
             </p>
         </section>
 
