--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 left: 0;
                 width: 220px;
                 height: 100vh;
-                background-color: #d6ccc2
+                background-color: #d6ccc2;
                 padding-top: 2rem;
                 box-shadow: 2px 0 5px rgba(0,0,0,0.1);
                 display: flex;
@@ -86,7 +86,7 @@
             #aboutWebsite {
                 margin-bottom: 20rem;
                 display: flex;
-                flex-wrap;
+                flex-wrap:wrap;
                 gap: 2rem;
                 justify-content: space-between;
                 padding: 2rem 1rem;
@@ -209,7 +209,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2025 Oricentric </p>
+            <p>&copy; 2025 Oricentric — Fernando & Francisco</p>
         </footer>   
     </body>
 </html>
