adding some stuff

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="styles.css">
 
         <style>
-
+            /* External CSS: Body and General Styles */
             * {
                 margin: 0;
                 padding: 0;
@@ -25,7 +25,7 @@
                 margin-left: 260px;
             }
             header {
-                background-color: #4A90E2;
+                background-color: #8eb8ea;
                 color: white;
                 font-family: playfair display, serif;
                 font-size: 1.7rem;
@@ -35,24 +35,25 @@
             }
             a {
                 text-decoration: none;
-                background-color: #4A90E2;
+                background-color: #8eb8ea;
             }
             a:hover {
                 text-decoration: underline;
                 background-color: #E86F68;
             }
+            /* External CSS: Sidebar Navigation */
             .sidebar {
                 position: fixed;
                 top: 0;
                 left: 0;
                 width: 220px;
                 height: 100vh;
-                background-color: #EAE8E2;
+                background-color: #7097c6;
                 padding-top: 2rem;
                 box-shadow: 2px 0 5px rgba(0,0,0,0.1);
                 display: flex;
                 flex-direction: column;
-                align-items: flext-start;
+                align-items: flex-start;
             }
             .sidebar ul {
                 list-style: none;
@@ -72,7 +73,7 @@
                 
             }
             .sidebar ul li a:hover {
-                background-color: #c4b7ad;
+                background-color: #72a5e3;
                 color: #141414;
                 transform: scale(1.05);
             }
@@ -84,6 +85,46 @@
                 border-radius: 5px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             }
+            /* External CSS: Hotkeys */
+            .hotkeys {
+                margin-top: 2rem;
+                padding: 1rem;
+                background-color: #7097c6;
+                border-radius: 5px;
+                width: 90%;
+            }
+            .hotkeys h4 {
+                margin-bottom: 0.5rem;
+                color: #000000;
+                text-align: center;
+            }
+            .hotkeys ul {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+            }
+            .hotkeys ul li {
+                margin-bottom: 0.5rem;
+                text-align: left;
+            }
+            .hotkeys ul li p {
+                color: #000000;
+                font-size: 0.9rem;
+                line-height: 1.4;
+            }
+            kbd {
+                background-color: #e0e0e0;
+                border: 1px solid #b0b0b0;
+                border-radius: 3px;
+                box-shadow: 0 1px 0 rgba(0,0,0,0.2);
+                color: #333333;
+                display: inline-block;
+                font-size: 0.9rem;
+                padding: 2px 6px;
+                margin: 0 2px;
+            }
+
+            /* Internal CSS: Home Page Specifics */
             #intro h3 {
                 margin-bottom: 10px;
                 font-size: 2rem;
@@ -105,7 +146,7 @@
             .infoBox {
                 background-color: white;
                 padding: 1.5rem;
-                border: 2px solid #EAE8E2
+                border: 2px solid #EAE8E2;
                 border-radius: 5px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.1);
                 text-align: center;
@@ -151,7 +192,7 @@
                 transform: scale(1.05);
             }
 
-            /* Features Section */
+            /* Internal CSS: Features Section */
             #features {
                 margin: 2rem 0;
                 border-radius: 5px;
@@ -193,6 +234,25 @@
                 transition: transform 0.3s ease;
             }
 
+            #finalMessage {
+                text-align: center;
+                font-size: 1.3rem;
+                margin: 2rem 0;
+                padding: 1.5rem;
+                background-color: #f4f1ef;
+                border-radius: 5px;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            }
+
+            #finalMessage > p {
+                margin-bottom: 1rem;
+                font-weight: bold;
+            }
+
+            #finalMessage > p:last-child {
+                font-style: italic;
+                font-family:playfair display, serif;
+            }
 
         </style>
     </head>
@@ -207,6 +267,40 @@
                 <li><a href="#folds">FOLDING IN ORIGAMI</a></li>
                 <li><a href="#references">References & Resources</a></li>
             </ul>
+            <aside class="hotkeys">
+                <h4> Hotkeys </h4>
+                <ul>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>B</kbd> - Home </p> </li>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>H</kbd> - History of Origami </p> </li>   
+                    <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - Origami Exhibit</p> </li>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - Folding in Origami </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - References & Resources </p></li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>T</kbd> - Toggle Theme </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - Play/Pause Music </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - Mute/Unmute Music </p> </li>    
+                </ul>
+
+                <script>
+                    document.addEventListener('keydown', function(event) {
+                        if (event.shiftKey) {
+                            switch(event.key.toLowerCase()) {
+                                /*Navigation Hotkeys*/
+                                case 'b': window.location.href = '#intro'; break;
+                                case 'h': window.location.href = '#history'; break;
+                                case 'e': window.location.href = '#exhibit'; break;
+                                case 'm': window.location.href = '#folds'; break;
+                                case 'r': window.location.href = '#references'; break;
+                               
+                                /*Theme and Music Hotkeys; MORE COMPLEX JS REQUIRED*/
+                                case "t": toggleTheme(); break;
+                                case "p": toggleMusicPlayPause(); break;
+                                case "u": toggleMusicMuteUnmute(); break;
+
+                            }
+                        }
+                    });
+                </script>
+            </aside>
         </nav>
 
         <header>
@@ -295,7 +389,10 @@
 
         <section id="finalMessage">
             <p> 
-                Together, we will guide you on a exhilerating journey into the world of paper folding- from every crevice and fold lies a secret waiting to be told!
+                Together, we will guide you on a exhilerating journey into the world of paper folding.
+            </p>
+            <p>
+                "In the midst of chaos, there is also opportunity." In the midst of patience, there is also creativity.  - Adapted from Sun Tzu
             </p>
         </section>
 
