--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
                     <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
                     <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>T</kbd> - THEME </p> </li>    
+                    <li> <p> <kbd>Shift
+                        
+                    </kbd> + <kbd>T</kbd> - THEME </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE </p> </li>    
                 </ul>
