--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
         <nav class = "sidebar">
             <ul>
                 <li><a href="#home">HOME</a></li>
-                <li><a href="#history">HISTORY OF ORIGAMI</a></li>
-                <li><a href="#exhibit">ORIGAMI EXHIBIT</a></li>
-                <li><a href="#folds">FOLDING IN ORIGAMI</a></li>
-                <li><a href="#references">RESOURCES</a></li>
+                <li><a href="../WDProjMgFernandoFrancisco/public/History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
+                <li><a href="../WDProjMgFernandoFrancisco/public/Exhibit>ORIGAMI EXHIBIT">ORIGAMI EXHIBIT</a></li>
+                <li><a href="../WDProjMgFernandoFrancisco/public/Origami_Exhibit.html">FOLDING IN ORIGAMI</a></li>
+                <li><a href="../WDProjMgFernandoFrancisco/public/References&Resources.html">RESOURCES</a></li>
             </ul>
             <aside class="hotkeys">
                 <h4> Hotkeys </h4>
@@ -264,7 +264,20 @@
         </section>
 
         <footer>
-            <p>&copy; 2025 Oricentric — Fernando & Francisco</p>
+            <h2> ORICENTRIC </h2>
+            <hr>
+            /* Legal Information */
+            <p> Address </p>
+                <p> Philippine Science High School - Main Campus, Agham Road, Diliman, Quezon City, Philippines </p>
+            <ul> <p> Email Addresses: </p> </ul>
+                <li> Fernando: b2029btpfernando@pshs.edu.ph </li>
+                <li> Francisco: b2029rapfrancisco@pshs.edu.ph </li>
+            <ul> <p> Socials </p> </ul>
+                <li> Instagram: something </li>
+                <li> Facebook: Oricentricsomething </li>
+                <li> Twitter: something </li>
+                <li> </li>
+            <p> &copy; 2025 Oricentric — Fernando & Francisco</p>
         </footer>   
 
 <script>
