--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HISTORY OF ORIGAMI</title>
+        <title>Oricentric</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="The home page of Oricentric">
@@ -10,61 +10,6 @@
         <link rel="stylesheet" href="styles.css">
 
         <style>
-
-            * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-            body {
-                font-family: Helvitica, sans-serif;
-                line-height: 1.6;
-                background-color: #f4f4f4;
-                color: #000000;
-                padding: 20px;
-                margin-left: 260px;
-            }
-            header {
-                background-color: #dfd6cb;
-                padding: 20px 0;
-                text-align: center;
-                border-bottom: 2px solid #e0e0e0;
-            }
-            .sidebar {
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 220px;
-                height: 100vh;
-                background-color: #d6ccc2;
-                padding-top: 2rem;
-                box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-                display: flex;
-                felx-direction: column;
-                align-items: flext-start;
-            }
-            .sidebar ul {
-                list-style: none;
-                width: 100%;
-                padding: 0;
-                margin-top: 1rem;
-            }
-            .sidebar ul li a{
-                display: block;
-                padding: 1rem;
-                font-weight: bolder;
-                color: #000000;
-                text-decoration: none;
-                letter-spacing: 1px;
-                border-bottom: 1px solid #e0e0e0;
-                transition: all 0.4s ease;
-                
-            }
-            .sidebar ul li a:hover {
-                background-color: #c4b7ad;
-                color: #141414;
-                transform: scale(1.05);
-            }
             #intro {
                 text-align: center;
                 margin-bottom: 2rem;
