--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="The home page of Oricentric">
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
+        <link rel="icon" type="image/png" href="/Oricentric_logo.png">
         <link rel="stylesheet" href="styles.css">
 
         <style>
@@ -148,10 +149,10 @@
         <nav class = "sidebar">
             <ul>
                 <li><a href="#home">HOME</a></li>
-                <li><a href="../WDProjMgFernandoFrancisco/public/History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
-                <li><a href="../WDProjMgFernandoFrancisco/public/Exhibit>ORIGAMI EXHIBIT">ORIGAMI EXHIBIT</a></li>
-                <li><a href="../WDProjMgFernandoFrancisco/public/Origami_Exhibit.html">FOLDING IN ORIGAMI</a></li>
-                <li><a href="../WDProjMgFernandoFrancisco/public/References&Resources.html">RESOURCES</a></li>
+                <li><a href="public/History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
+                <li><a href="public/Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
+                <li><a href="public/Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
+                <li><a href="public/References&Resources.html">RESOURCES</a></li>
             </ul>
             <aside class="hotkeys">
                 <h4> Hotkeys </h4>
@@ -266,17 +267,23 @@
         <footer>
             <h2> ORICENTRIC </h2>
             <hr>
-            /* Legal Information */
-            <p> Address </p>
+
+            <!-- Left -->
+            
                 <p> Philippine Science High School - Main Campus, Agham Road, Diliman, Quezon City, Philippines </p>
-            <ul> <p> Email Addresses: </p> </ul>
+            <ul> <p> Email Addresses: </p> 
                 <li> Fernando: b2029btpfernando@pshs.edu.ph </li>
                 <li> Francisco: b2029rapfrancisco@pshs.edu.ph </li>
-            <ul> <p> Socials </p> </ul>
+            </ul>
+
+            <!-- Right -->
+            <ul> 
+                <p> Social Media: </p>
                 <li> Instagram: something </li>
                 <li> Facebook: Oricentricsomething </li>
                 <li> Twitter: something </li>
-                <li> </li>
+            </ul>
+
             <p> &copy; 2025 Oricentric — Fernando & Francisco</p>
         </footer>   
 
