--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -10,24 +10,6 @@
         <link rel="stylesheet" href="styles.css">
 
         <style>
-            #intro {
-                text-align: center;
-                margin-bottom: 2rem;
-                padding: 2rem 1rem;
-                background-color: #f4f1ef;
-                border-radius: 5px;
-                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            }
-            #intro h3 {
-                margin-bottom: 10px;
-                font-size: 2rem;
-                color: #141414;
-            }
-            #intro p {
-                font-size: 1.2rem;
-                max-width: 600px;
-                margin: 0 auto;
-            }
             #intro_objectives {
                 margin-bottom: 20rem;
                 display: flex;
@@ -110,8 +92,8 @@
         </header>
         
         <section id="intro">
-            <h3>Oricentric: Unfolding a Colorful History</h3>
-            <p>Welcome to Oricentric, your gateway to the fascinating world of origami! As you embark on this journey with us, we invite you to explore the rich history and cultural significance of origami, the ancient art of paper folding that has captivated hearts across the globe for centuries. From its humble beginnings in Japan to its evolution into a global phenomenon, origami is more than just an art form; it is a testament to human creativity and ingenuity. Join us as we delve into the origins, traditions, and modern applications of origami, uncovering the stories behind each fold and crease. Whether you're a seasoned folder or a curious newcomer, Oricentric promises to be an enlightening experience that celebrates the beauty and complexity of this timeless craft.</p>
+            <h3> Oricentric: Unfolding a Colorful History </h3>
+            <p> History Introduction </p>
         </section>
 
         <section id="intro_objectives">
