--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -7,11 +7,11 @@
         <meta name="description" content="The home page of Oricentric">
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
 
         <style>
             #intro_objectives {
-                margin-bottom: 20rem;
+                margin-bottom: 2rem;
                 display: flex;
                 flex-wrap:wrap;
                 gap: 2rem;
@@ -28,7 +28,7 @@
             }
 
             #significance {
-                margin-bottom: 20rem;
+                margin-bottom: 2rem;
                 display: flex;
                 flex-wrap:wrap;
                 gap: 2rem;
@@ -37,7 +37,7 @@
             }
 
             #innovators {
-                margin-bottom: 20rem;
+                margin-bottom: 2rem;
                 display: flex;
                 flex-wrap:wrap;
                 gap: 2rem;
@@ -96,50 +96,36 @@
             <p> History Introduction </p>
         </section>
 
-        <section id="intro_objectives">
-            <div class = infoBox id="objectives">
-                <h2> Understand where and how origami began </h2>
-                    <div class="infoContent"> 
-                        <p>
-                            text for obectveis
-                        </p>
-                    </div>
-            </div>
+        <section id="timeline" class="contentSection">
+            <h2> History Timeline </h2>
 
-            <div class = infoBox id="mission">
-                <h2> Learn how origami developed through time</h2>
-                    <div class="infoContent"> 
-                        <p>
-                            text for objectives
-                        </p>
-                    </div>
-             </div>
+            <article id = "earlyBeginnings"> 
+                <h3> Early Beginnings and Invention of Origami </h3>
+                <p>
+                    txt
+                </p>
+            </article>
 
-            <div class = infoBox id="audience">
-                <h2> Appreciate origami's long lasting impact on art,culture, and science </h2>
-                    <div class="infoContent">
-                        <p>
-                            text for obectives
-                        </p>
-                    </div>
-            </div>
-        </section>
+            <article id = "japaneseCulture"> 
+                <h3> Integration of Origami into Japanese Culture </h3>
+                <p>
+                    txt
+                </p>
+            </article>
 
-        <section id="timeline">
-        <!-- Initial descriptions per timeline
-         Early Beginnings and Invention of Origami:
-         txt
+            <article id = "globalInfluence"> 
+                <h3> Global Influence and Origami Spreading Worldwide </h3>
+                <p>
+                    txt
+                </p>    
+            </article>
 
-         Integration of Origami into Japanese Culture:
-         txt
-
-         Global Influence and Origami Spreading Worldwide:
-         txt
-
-         Modern Applications inspiring Architecture and Robotics:
-         txt   
-
-        -->
+            <article id = "modernApplications"> 
+                <h3> Modern Applications inspiring Architecture and Robotics </h3>
+                <p>
+                    txt
+                </p>
+            </article>
         </section>
 
         <section id="significance">
