--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@
 
         <style>
             /* Internal CSS: Home Page Specifics */
-            #intro h3 {
-                margin-bottom: 10px;
-                font-size: 2rem;
-                color: #141414;
-            }
-            #intro p {
-                font-size: 1.2rem;
-                max-width: 600px;
-                margin: 0 auto;
-            }
-            #aboutWebsite {
+            #aboutWebsite { /* Info Boxes Container */
                 margin-bottom: 2rem;
                 display: flex;
                 flex-wrap:wrap;
