--- a/public/Folding_In_Origami.html
+++ b/public/Folding_In_Origami.html
@@ -7,4 +7,4 @@
         <meta name="description" content="The home page of Oricentric">
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
