--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -7,12 +7,9 @@
         <meta name="description" content="The references page of Oricentric">
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
 
         <style>
-
-       
-
             #intro {
                 text-align: center;
                 margin-bottom: 2rem;
