--- a/public/References&Resources.html
+++ b/public/References&Resources.html
@@ -7,7 +7,7 @@
         <meta name="description" content="The references page of Oricentric">
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
 
         <style>
 
