--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -21,12 +21,45 @@
             #timeline{
                 margin-bottom: 20rem;
                 display: flex;
-                flex-wrap:wrap;
-                gap: 2rem;
+                flex-direction: column;
                 justify-content: space-between;
-                padding: 2rem 1rem;
+                padding-left: 4rem;
+                position: relative;
+                width: 95%;
+                gap: 5rem;
+                padding: 2rem;
             }
-
+             #timeline article {
+                background-color: #FFFFFF;
+                padding: 2rem 2rem;
+                border-radius: 5px;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+                transition: all 0.3s ease;
+                position: relative;
+            }
+                #timeline::before { /* This generates a Vertical line*/
+                    content: '';
+                    position: absolute;
+                    left: 20px;
+                    top: 0;
+                    bottom: 0;
+                    width: 4px;
+                    background-color: var(--secondary-color);
+                }
+                #timeline article:hover {
+                    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+                }
+                #timeline article::before { /* This generates the circles on the vertical line */
+                    content: '';
+                    position: absolute;
+                    left: -3rem;
+                    top: 1rem;
+                    width: 16px;
+                    height: 16px;
+                    background-color: var(--secondary-color);
+                    border-radius: 50%;
+                    border: 4px solid #FFFFFF;
+            }
             #significance {
                 margin-bottom: 2rem;
                 display: flex;
